# pyGC

./: .gitignore  README.md  ar_model.py  dados_rodrigo.py  example.py  gc_fft.py  gc_wvl.py  gen_ar.py  gen_enviroment.sh  gen_wvl_mat.py  plot_gc.py  plot_results.py  pyGC.py  pySpec.py  pyproject.toml  requirements.txt  run.sh  runRBEF.py  seth_example.py  spec_analysis_sec.py  spec_zap.py
.ipynb_checkpoints/: Examples-checkpoint.ipynb
.virtual_documents/notebooks/: 01_basic_granger_causality.ipynb  02_spectral_analysis_mne.ipynb  03_conditional_granger_causality.ipynb  04_benchmarks.ipynb
data/: data.txt  gc_fft.npy
joss/: Makefile  paper.aux  paper.bbl  paper.bib  paper.blg  paper.md  paper.out  paper.tex
notebooks/: 01_basic_granger_causality.ipynb  02_spectral_analysis_mne.ipynb  03_conditional_granger_causality.ipynb  04_benchmarks.ipynb  05_spectral_methods_comparison.ipynb
notebooks/.ipynb_checkpoints/: 01_basic_granger_causality-checkpoint.ipynb  02_spectral_analysis_mne-checkpoint.ipynb  03_conditional_granger_causality-checkpoint.ipynb  04_benchmarks-checkpoint.ipynb  05_spectral_methods_comparison-checkpoint.ipynb  06_example_with_eletrophysiological_data-checkpoint.ipynb
pygc/: __init__.py  _jax_backend.py  ar_model.py  covgc.py  granger.py  non_parametric.py  parametric.py  pyGC.py  pySpec.py  spectral_analysis.py  tools.py
pygc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_covgc.py  test_granger.py  test_jax_backend.py  test_non_parametric.py  test_parametric.py  test_spectral.py  test_tools.py
(+12 files in other folders)
