[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygc"
version = "2.0.0"
description = "Granger Causality in the frequency domain — parametric and non-parametric estimation"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Vinicius Lima", email = "vinicius.lima.cordeiro@gmail.com" }]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "mne>=1.4",
    "joblib>=1.3",
    "h5py>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.25",
]
jax = [
    "jax>=0.4",
]
numba = [
    "numba>=0.57",
]

[tool.setuptools.packages.find]
include = ["pygc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
